--- a/WpfApp6/MainWindow.xaml
+++ b/WpfApp6/MainWindow.xaml
@@ -1,32 +1,18 @@
-﻿<Window
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:WpfApp6"
-        xmlns:ui="http://schemas.modernwpf.com/2019"
-        xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation" x:Class="WpfApp6.MainWindow"
-        mc:Ignorable="d"
-        Title="Eon" Height="413" Width="708"
-        ui:WindowHelper.UseModernWindowStyle="True" ResizeMode="NoResize">
+﻿<UserControl x:Class="WpfApp6.Pages.Home"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:local="clr-namespace:WpfApp6.Pages"
+             mc:Ignorable="d" Width="386" Height="364">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="315*"/>
-            <ColumnDefinition Width="4*"/>
-            <ColumnDefinition Width="0*"/>
-            <ColumnDefinition Width="481*"/>
-        </Grid.ColumnDefinitions>
-        <ui:NavigationView x:Name="NavView" Loaded="NavView_Loaded" SelectionChanged="NavView_SelectionChanged" PaneDisplayMode="Left" IsBackButtonVisible="Collapsed" IsPaneToggleButtonVisible="False" IsPaneOpen="True" HorizontalAlignment="Left" Width="800" Grid.ColumnSpan="4">
-            <ui:NavigationView.MenuItems>
-                <ui:NavigationViewItem Icon="Play" Content="Home" Tag="Home"/>
-            </ui:NavigationView.MenuItems>
-        </ui:NavigationView>
-        <ui:Frame x:Name="ContentFrame" Margin="41,0,0,0" Height="397.04" Grid.Column="3">
-            <ui:Frame.ContentTransitions >
-                <ui:TransitionCollection>
-                    <ui:NavigationThemeTransition />
-                </ui:TransitionCollection>
-            </ui:Frame.ContentTransitions>
-        </ui:Frame>
+
+
+        <Image HorizontalAlignment="Left" Height="142" VerticalAlignment="Top" Width="128" Source="https://i.ibb.co/1tHXHTrX/exit-logo.png" RenderTransformOrigin="1.268,0.599" Margin="122,0,0,0"/>
+        <Button Content="Launch" Margin="0,305,0,0" VerticalAlignment="Top" Width="342" Height="45" Click="Button_Click" HorizontalAlignment="Center"/>
+        <Button Content="Download Build" Margin="0,255,0,0" VerticalAlignment="Top" Height="44" Width="342" Click="Discord_Click" RenderTransformOrigin="0.4,0.351" HorizontalAlignment="Center"/>
+        <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" VerticalAlignment="Top" Width="258" FontSize="15" TextAlignment="Center" FontWeight="Bold" Height="100" Margin="0,157,0,0"><Run Text="Remeber!, this is made by Zinx28 and I whiterose made the download, that's the launchers credits! (remove them I will find your project but you can remove this) "/><LineBreak/><Run/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="130,133,0,0" TextWrapping="Wrap" Text="(Launcher by Zinx28) " VerticalAlignment="Top" TextAlignment="Center" FontStyle="Italic" Foreground="#FF3A3A3A"/>
+
     </Grid>
-</Window>
+</UserControl>
